--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,6 +11,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  height: 100%;
 }
 
 @media screen and (max-width: 790px) {
