--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 100%;
+  height: 100vh;
 }
 
 @media screen and (max-width: 790px) {
